// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attached results analytics actions when analyticsMode is \`next\` logCaseAttach should call relay.emit properly 1`] = `
[
  "ItemAction",
  {
    "action": "attach",
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
    "itemMetadata": {
      "author": "example author",
      "title": "example documentTitle",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "example contentIDValue",
      "url": "example documentUri",
    },
    "position": 1,
    "searchUid": "example searchUid",
  },
]
`;

exports[`attached results analytics actions when analyticsMode is \`next\` logCaseDetach should call relay.emit properly 1`] = `
[
  "DetachItem",
  {
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
    "itemMetadata": {
      "author": "example author",
      "title": "example documentTitle",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "example contentIDValue",
      "url": "example documentUri",
    },
  },
]
`;
